* Updated `asString()` step to throw `IllegalArgumentException` with `null` inputs for casting step consistency.
* Renamed `MergeElementStep` to `MergeElementStep` as it is a base class to `mergeV()` and `mergeE()`.
* Renamed `MergeStep` of `merge()` to `MergeElementStep` for consistency.
* Fixed referenced log file name for `gremlin-archetype-server`.
* Upgraded Go to version 1.25.
* Modified `RepeatUnrollStrategy` to use a more conservative approach, only unrolling repeat loops containing safe navigation and filtering steps.
* Modified `limit()`, `skip()`, range()` in `repeat()` to track per-iteration counters.
* Moved `Traverser` loop logic into new interface `NL_SL_Traverser` and changed loop-supporting `Traverser`s to extend the common interface.

== TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-zamfir.png[width=185]

[[release-3-7-5]]
=== TinkerPop 3.7.5 (Release Date: NOT OFFICIALLY RELEASED YET)

* Improved Java driver host availability on connection pool initialization.
* Added getter for `parameterItems` and `valueTraversal` on `DifferenceStep`.
* Added properties to `Element` objects found in a `Path` for GraphSON v2 and v3 and GraphBinary.
* Fixed edge properties for GraphBinary which were not deserializing properly.
* Deprecated `has(key, traversal)` and `has(T, traversal)` options for `has()` step.
* Improved GLV examples reliability and documentation with step-by-step instructions.
* Added root-level GLV examples in `gremlin-examples/` directory that use published driver versions for easy out-of-the-box usage, separate from module-level examples that use local development code.
* Bump netty to 4.1.125.Final

[[release-3-7-4]]
=== TinkerPop 3.7.4 (Release Date: August 1, 2025)

* Fixed bug in server `Settings` where it was referencing a property that was back in 3.3.0 and generating a warning log.